--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="sky_blue">#00d5e5</color>
+    <color name="sky_blue_dark">#6ebdea</color>
+    <color name="gray">#a8a6a6</color>
 </resources>
