--- a/app/src/main/res/layout/activity_formulario_paciente.xml
+++ b/app/src/main/res/layout/activity_formulario_paciente.xml
@@ -23,6 +23,7 @@
             android:layout_marginTop="140dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:hint="@string/nombresPaciente"
             android:text="@={viewModelFormulario.pacienteNombres}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.502"
@@ -36,6 +37,7 @@
             android:layout_marginTop="72dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:hint="@string/correo"
             android:text="@={viewModelFormulario.pacienteEmail}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.502"
@@ -48,6 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="88dp"
             android:ems="10"
+            android:hint="@string/dniPaciente"
             android:text="@={viewModelFormulario.pacienteDni}"
             android:inputType="number"
             app:layout_constraintEnd_toEndOf="parent"
@@ -57,10 +60,11 @@
 
         <Button
             android:id="@+id/buttonRegistrar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Registrar"
+            android:layout_width="197dp"
+            android:layout_height="61dp"
+            android:background="@drawable/registerbackground"
             android:onClick="@{()->viewModelFormulario.onClickRegistrar()}"
+            android:text="Registrar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
