--- a/app/src/main/res/layout/activity_visita_paciente.xml
+++ b/app/src/main/res/layout/activity_visita_paciente.xml
@@ -22,6 +22,7 @@
             android:layout_marginTop="100dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:hint="@string/codigovisita"
             android:text="@={viewModelVisita.visitaCodigo}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.502"
@@ -35,6 +36,7 @@
             android:layout_marginTop="80dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:hint="@string/dniPaciente"
             android:text="@={viewModelVisita.visitaDni}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.502"
@@ -48,6 +50,7 @@
             android:layout_marginTop="80dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:hint="@string/pesoPaciente"
             android:text="@={viewModelVisita.visitaPeso}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.502"
@@ -61,6 +64,7 @@
             android:layout_marginTop="80dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:hint="@string/temperaturaPaciente"
             android:text="@={viewModelVisita.visitaTemperatura}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.502"
@@ -75,6 +79,7 @@
             android:layout_marginTop="80dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:hint="@string/nivelSaturacion"
             android:text="@={viewModelVisita.visitaSaturacion}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.502"
@@ -88,6 +93,7 @@
             android:layout_marginTop="80dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:hint="@string/presionPaciente"
             android:text="@={viewModelVisita.visitaPresion}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.502"
@@ -96,11 +102,12 @@
 
         <Button
             android:id="@+id/buttonRegistrar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="190dp"
+            android:layout_height="45dp"
             android:layout_marginTop="80dp"
-            android:text="Registrar"
+            android:background="@drawable/registerbackground"
             android:onClick="@{()->viewModelVisita.onClickRegistrar()}"
+            android:text="Registrar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
